# floris

./: .buildinfo  .codecov.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CONTRIBUTING.rst  FLORIS.py  LICENSE.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  advanced_concepts.html  analytic_power_77.txt  analytics.txt  api_docs.html  architecture.html  background_concepts.html  bibliography.html  code_quality.html  dev_guide.html  empirical_gauss_model.html  examples.html  floating_wind_turbine.html  floris_101.html  floris_models.html  floris_test2.py  floris_test_dyn1.py  florisarch.xml  genindex.html  heterogeneous_map.html  index.html  input_reference.html  input_reference_main.html  input_reference_turbine.html  installation.html  (+20 more)
.git-rewrite/: backup-refs  commit  index  message  raw-heads  revs
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
FLORIS/: BaseObject.py
PR_TurbOParkGauss/: Case_RowPark_TurbOPark.yaml  Case_RowPark_TurbOParkGauss.yaml  Case_Rowpark_TurbOPark.py  Case_SingleTurbineWake.ipynb  Case_SingleTurbineWake.yaml  Case_TwinPark_TurbOPark.yaml  Case_TwinPark_TurbOParkGauss.yaml  Case_TwinPark_TurbOPark_implementation.py  Rowpark_Orsted.csv  compare_TurbOPark_implementations.py  turbopark_cubature.yaml  turboparkgauss_cubature.yaml
_autosummary/: floris.convert_floris_input_v3_to_v4.html  floris.convert_turbine_v3_to_v4.html  floris.core.base.html  floris.core.core.html  floris.core.farm.html  floris.core.flow_field.html  floris.core.grid.html  floris.core.html  floris.core.rotor_velocity.html  floris.core.solver.html  floris.core.turbine.controller_dependent_operation_model.html  floris.core.turbine.html  floris.core.turbine.operation_models.html  floris.core.turbine.turbine.html  floris.core.turbine.unified_momentum_model.html  floris.core.wake.html  floris.core.wake_combination.fls.html  floris.core.wake_combination.html  floris.core.wake_combination.max.html  floris.core.wake_combination.sosfs.html  floris.core.wake_deflection.empirical_gauss.html  floris.core.wake_deflection.gauss.html  floris.core.wake_deflection.html  floris.core.wake_deflection.jimenez.html  floris.core.wake_deflection.none.html  floris.core.wake_turbulence.crespo_hernandez.html  floris.core.wake_turbulence.html  floris.core.wake_turbulence.none.html  floris.core.wake_turbulence.wake_induced_mixing.html  floris.core.wake_velocity.cumulative_gauss_curl.html  floris.core.wake_velocity.empirical_gauss.html  floris.core.wake_velocity.gauss.html  floris.core.wake_velocity.html  floris.core.wake_velocity.jensen.html  floris.core.wake_velocity.none.html  floris.core.wake_velocity.turbopark.html  floris.core.wake_velocity.turboparkgauss.html  floris.cut_plane.html  floris.floris_model.html  floris.flow_visualization.html  (+300 more)
_modules/: index.html
_sources/: dev_guide.md  empirical_gauss_model.md  examples.md  heterogeneous_map.ipynb  index.md  installation.md  wake_models.ipynb
_static/: documentation_options.js
benchmarks/: bench.py
docs/: DOCS_TODO.md  Doxyfile  Makefile  _config.yml  _toc.yml  advanced_concepts.html  advanced_concepts.ipynb  api_docs.html  api_docs.md  api_docs.rst  architecture.md  background_concepts.ipynb  call_graph_script.py  cc.yaml  code_quality.ipynb  conf.py  dev_guide.html  dev_guide.md  empirical_gauss_model.md  examples.md  floating_wind_turbine.md  floris_101.ipynb  floris_models.html  floris_models.ipynb  gch.yaml  geometric_model.md  heterogeneous_map.ipynb  index.html  index.md  index.rst  input_reference.md  input_reference.rst  input_reference_main.html  input_reference_turbine.html  input_reference_turbine.md  installation.html  installation.md  intro.md  intro_concepts.html  intro_concepts.ipynb  (+26 more)
example/: FLORIS_Run_Notebook.ipynb  JensenJimenez.py  NREL5MW.json  OptModules.py  TwoByTwo.py  example_optimization.py  example_script.py  farm_example.json  floris.json  layout_example.csv  project_example.json  wakes_example.json
examples/: 001_opening_floris_computing_power.html  001_opening_floris_computing_power.py  002_visualizations.html  002_visualizations.py  002_wind_data_objects.py  003_wind_data_objects.html  003_wind_data_objects.py  004_set.html  004_set.py  005_getting_power.html  005_getting_power.py  006_get_farm_aep.html  006_get_farm_aep.py  007_sweeping_variables.html  007_sweeping_variables.py  008_uncertain_models.html  008_uncertain_models.py  009_compare_farm_power_with_neighbor.html  009_compare_farm_power_with_neighbor.py  009_parallel_models.html  009_parallel_models.py  00_getting_started.html  00_getting_started.ipynb  00_getting_started.py  010_compare_farm_power_with_neighbor.html  010_compare_farm_power_with_neighbor.py  01_ev_opening_floris_computing_power.py  01_opening_floris_computing_power.py  01_plot_wakes.py  01b_temp_compare_models.py  02_basic_adjustments.py  02_visualizations.py  02a_visualizations_small.py  02b_layout_visualizations.py  02b_test_added_points.py  02b_visualizations_across_models.py  02c_test_added_points_wd.py  03_compare_models.py  03_making_adjustments.py  04_sweep_wind_directions.py  (+183 more)
examples_new/: example_input.json  example_input_full.json  example_input_gauss.json  example_input_gauss_diamond.json  example_input_legacy.json  example_input_legacy_gch_paper.json  input_default.json  input_merge.json
farms/: TwoByTwo.py
floris/: BaseObject.py  BaseObject_test.py  Controls.py  Coordinate.py  Coordinate_test.py  FLORIS.py  Farm.py  Floris.py  FlowField.py  FlowField_test.py  InputReader.py  Turbine.py  TurbineMap.py  VisualizationManager.py  Wake.py  WakeCombination.py  WakeDeflection.py  WakeVelocity.py  Wake_test.py  __init__.py  approx_floris_model.py  convert_floris_input_v3_to_v4.py  convert_turbine_v3_to_v4.py  coordinate.py  cut_plane.py  default_inputs.py  default_inputs.yaml  farm.py  floris.py  floris_interface.py  floris_model.py  floris_model_utils.py  flow_field.py  flow_visualization.py  het_map.py  heterogeneous_map.py  input_reader.py  logging.py  (+27 more)
floris.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+2098 files in other folders)
