# Copyright 2021 NREL

# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

# See https://floris.readthedocs.io for documentation

[metadata]
name = FLORIS
version = attr: floris.__version__
description = A controls-oriented engineering wake model.
long_description = file: README.md
keywords = wind energy, wind farm, wake steering, wind farm controls, wake modeling
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
url = https://github.com/NREL/FLORIS
author_email = rafael.mudafort@nrel.gov
author = NREL National Wind Technology Center
python_requires = >=3.7.0

[options]
package_dir=
    =src
packages=find:

install_requires =
    # simulation
    attrs
    pyyaml
    numexpr
    numpy >= 1.20
    scipy >= 1.1

    # tools
    matplotlib >= 3
    pandas
    # shapely

    # utilities / testing
    coloredlogs >= 10.0
    pytest>=4
    # coverage[toml]  # for getting code coverage

extras_require =
docs = readthedocs-sphinx-ext; Sphinx; sphinxcontrib-napoleon
develop = pre-commit; black; isort; flake8; flake8-docstrings

[options.packages.find]
where=src

